<resources>
    <string name="app_name">PokemonCombat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokebool_image">Pokeball</string>
    <string name="pokemon_name">Name</string>
    <string name="hp">HP</string>
    <string name="hp_image">HealthPoints</string>
    <string name="atack_normal">Base Atack</string>
    <string name="normal_atack_image">Normal Atack Image</string>
    <string name="normal_defense_image">Normal Defense Image</string>
    <string name="normal_defense">Base Defense</string>
    <string name="special_atack_image">Spacial Atack image</string>
    <string name="special_atack">Special Atack</string>
    <string name="special_shield_image">Special Shield Image</string>
    <string name="special_shield">Special Defense</string>
    <string name="new_pokemon">New Pokemon</string>
    <string name="pokemon_combat">Pokémon Combat</string>
    <string name="battle">Battle</string>
    <string name="start">Start</string>
    <string name="nombre_del_pok_mon">Nombre del Pokémon</string>
    <string name="hp_100">HP: 100</string>
    <string name="ataque_50">Atack: 50</string>
    <string name="normal_defense_50">Defense: 50</string>
    <string name="special_defense_50">Special Defense: 50</string>
    <string name="special_ataque_50">Special Atack: 50</string>
    <string name="add_pokemon">ADD POKEMON</string>
</resources>