<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewPokemon"
    android:orientation="vertical"
    android:padding="30dp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/nameImage"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:src="@drawable/baseline_catching_pokemon_24"
                android:contentDescription="@string/pokebool_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayoutpokemonName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/pokemon_name"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/hp_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:src="@drawable/baseline_local_hospital_24"
                android:contentDescription="@string/hp_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TiLayouthp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/healthPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    
                    android:hint="@string/hp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/atack_normal_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:src="@drawable/baseline_swords"
            android:contentDescription="@string/normal_atack_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiLayoutatack_normal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/atack_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/atack_normal"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/normal_defense_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:src="@drawable/baseline_health_and_safety_24"
            android:contentDescription="@string/normal_defense_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiLayoutNormal_defense"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/normalDefense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/normal_defense"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/special_atack_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:src="@drawable/sword_slice_special_com"
            android:contentDescription="@string/special_atack_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiLayoutSpecial_atack"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/special_atack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/special_atack"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/special_shield_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:src="@drawable/shield_reflect_special"
            android:contentDescription="@string/special_shield_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiLayoutSpecial_shield"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/special_shield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/special_shield"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>