<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:id="@+id/newPokemonBotton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/design_default_color_primary_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_semibold"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="@string/new_pokemon"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/new_pokemon_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:src="@drawable/pokegenie_svgrepo_com" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/black"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pokemon_svgrepo_com"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/pixelify_semibold"
                android:gravity="center"
                android:text="@string/pokemon_combat"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:shadowColor="@color/grey_dark"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/battleStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/design_default_color_error"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_semibold"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="@string/battle"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/fight_svgrepo_com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixelify_semibold"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="35sp"/>
    </LinearLayout>

</LinearLayout>